Atualização de Status

--- a/docs/Colaborativo/Readme
+++ b/docs/Colaborativo/Readme
@@ -5,3 +5,5 @@ Informe se esta trabalhando no documento / informe a aula seguida / Descreva o q
 Colaborativo:
 Victor/em execução/Unidade2-Tema1-Aula1-Video1/Criado o Projeto.
 Victor/Finalizada/Unidade2-Tema1-Aula1-Video1/Criado o Projeto.
+
+Ana/Finalizada/Configuração do ambiente e tela de cadastro de receitas (CRUD e Banco de dados)
